cabal-version:       3.0
build-type:          Simple

name:                leet-benchmark
version:             0.1.0.0
category:            misc
synopsis:            LeetCode 1347 in Haskell

extra-doc-files:     README.md

source-repository    head
    type:            git
    location:        https://github.com/luciusmagn/leet-benchmark


-- * Benchmark

executable               solution-hs
    
    build-depends:       base ^>= 4.21
                 ,       primitive ^>= 0.9.1

    default-language:    Haskell2010

    hs-source-dirs:      .

    main-is:             solution.hs

    ghc-options:         -Wall
                         -fexpose-all-unfoldings
                         -fspecialize-aggressively
                         -O2
